--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,9 @@ body{
     background: #000;
     font-family: "Raleway"
 }
+ul li{
+    list-style: none;
+}
 .container{
     max-width: 1200px;
 }
