--- a/public/css/style.css
+++ b/public/css/style.css
@@ -137,3 +137,61 @@ a:hover{
     text-decoration: none;
     color: #333;
 }
+
+.comments{
+    color: #000;
+    padding: 10px;
+    background: #fff;
+}
+.author-image{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: #999;
+    float: left;
+    margin-right: 15px;
+}
+.author-image img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+.author-name{
+    float: left;
+    position: relative;
+}
+.author-name>h4{
+    margin-top: 0;
+    position: relative;
+}
+.author-time{
+    margin-top: 0;
+    position: absolute;
+    font-size: 11px;
+    top: 25px;
+    font-style: italic;
+    color: #ccc;
+}
+.comment-content{
+    clear: both;
+    margin-left: 65px;
+    font-size: 15px;
+    line-height: 1.3em;
+}
+.general-info{
+    
+    padding: 20px;
+}
+.comment-text{
+    font-size: 13px;
+    line-height: 14px;
+}
+
+/*Styling for my new comments*/
+
+.user-image{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: deeppink;
+}
