--- a/public/css/style.css
+++ b/public/css/style.css
@@ -138,6 +138,7 @@ a:hover{
     color: #333;
 }
 
+/*Styling for comments*/
 .comments{
     color: #000;
     padding: 10px;
@@ -187,11 +188,15 @@ a:hover{
     line-height: 14px;
 }
 
-/*Styling for my new comments*/
-
 .user-image{
     width: 50px;
     height: 50px;
     border-radius: 50%;
     background: deeppink;
+}
+.reply-collapse{
+    margin-top: 10px;
+}
+.view-collapse{
+    margin-top: 10px;
 }
