--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,3 +200,12 @@ a:hover{
 .view-collapse{
     margin-top: 10px;
 }
+
+.main-section{
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 100px;
+    background: #fff8b3;
+    box-shadow: 0px 0px 20px #c1c1c1;
+    height: 400px;
+}
